--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* ? Import Font from Font Google */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@100;400;500;700&display=swap");
 
 :root {
   --ligth-blue: #b2d8f7;
@@ -13,6 +14,7 @@
   font-family: sans-serif;
   padding: 0;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .timer {
@@ -71,10 +73,16 @@
 }
 h1 {
   margin-top: 2rem;
+  font-size: 2.5rem;
 }
 h1,
 h3 {
   text-align: center;
+}
+h3 {
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Mono", monospace;
 }
 .alert {
   font-size: 3rem;
