--- a/css/style.css
+++ b/css/style.css
@@ -50,15 +50,33 @@
 }
 
 .answer {
-  width: 30rem;
+  width: 60%;
   position: absolute;
-  bottom: 0;
+  bottom: 5rem;
   right: 1rem;
   left: 1rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
   margin: 1rem auto;
+}
+@media only screen and (max-width: 600px) {
+  .answer {
+    position: relative;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 1rem auto;
+  }
+
+  .suit {
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 1rem;
+  }
 }
 
 .answer button {
