--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,14 @@ h1,
 h3 {
   text-align: center;
 }
-h3 {
+h3,
+h3 * {
+  color: inherit;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
   font-family: "Roboto Mono", monospace;
 }
+
 .alert {
   font-size: 3rem;
 }
