--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@
   .suit {
     text-align: center;
     margin: 2rem 0;
-    font-size: 1rem;
+    font-size: 0.5rem;
   }
 }
 
@@ -87,7 +87,7 @@
 .suit {
   text-align: center;
   margin: 2rem 0;
-  font-size: 6rem;
+  font-size: 4rem;
 }
 h1 {
   margin-top: 2rem;
@@ -115,4 +115,45 @@ h3 * {
   flex-direction: column;
   width: 80%;
   height: 100vh;
+}
+
+#menang,
+#kalah,
+#waktu-habis,
+#seri {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  top: 0;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 50;
+}
+#kalah {
+  display: none;
+  background-color: lightcoral;
+}
+
+#menang {
+  display: none;
+  background-color: lightgreen;
+}
+#waktu-habis,
+#seri {
+  display: none;
+  background-color: lightsalmon;
+}
+#menang h2,
+#kalah h2,
+#waktu-habis h2 {
+  font-size: 2.5rem;
+}
+#seri h2 {
+  font-size: 2rem;
+}
+#menang * {
+  margin: 1rem auto;
 }
